BLAZ-25168 Updated the read me content for github sample.

--- a/Annotations/Retrieve the comment status/Retrieve the comment status/Properties/launchSettings.json
+++ b/Annotations/Retrieve the comment status/Retrieve the comment status/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Annotationreviewstatus": {
+    "Retrievethecommentstatus": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
