added PDF conversion

--- a/Common/Load PDF, Excel, PPT file types/open_all_files.csproj
+++ b/Common/Load PDF, Excel, PPT file types/open_all_files.csproj
@@ -7,9 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.4.0.38" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.4.0.38" />
-    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.4.0.38" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.Inputs" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="20.4.0.43" />
+    <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="20.4.0.43" />
   </ItemGroup>
 
 </Project>
