story(ES-833426): Load a PDF document from base64 string.

--- a/Load and Save/Load a PDF file from base 64 string/Load a PDF file from base 64 string-SfPdfViewer/Load_a_PDF_file_from_base64.csproj
+++ b/Load and Save/Load a PDF file from base 64 string/Load a PDF file from base 64 string-SfPdfViewer/Load_a_PDF_file_from_base64.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
