--- a/Server Deployment/Maui/MauiBlazorAndroid - SfPdfViewer/MauiBlazorAndroid/MauiBlazorAndroid.csproj
+++ b/Server Deployment/Maui/MauiBlazorAndroid - SfPdfViewer/MauiBlazorAndroid/MauiBlazorAndroid.csproj
@@ -62,6 +62,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Syncfusion.Blazor.Themes" Version="22.1.37" />
+		<PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="22.1.37" />
     </ItemGroup>
 
     <ItemGroup>
