903963: Update the version of Syncfusion packages in the pdfviewer examples

--- a/Annotations/Comment Panel/Show or hide comment panel/Show or hide comment panel/Show_or_hide_comment_panel.csproj
+++ b/Annotations/Comment Panel/Show or hide comment panel/Show or hide comment panel/Show_or_hide_comment_panel.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.3.0.52" />    
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />    
   </ItemGroup>
 
 </Project>
