--- a/Common/Get the PDF document as a byte array - SfPdfViewer/Get_Data_from_PDF/Get_Data_from_PDF/Get_Data_from_PDF.csproj
+++ b/Common/Get the PDF document as a byte array - SfPdfViewer/Get_Data_from_PDF/Get_Data_from_PDF/Get_Data_from_PDF.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
