--- a/Annotations/Comment Panel/Customize DateTimeFormat - SfPdfViewer/Customize DateTimeFormat/Customize_DateTimeFormat/Customize_DateTimeFormat.csproj
+++ b/Annotations/Comment Panel/Customize DateTimeFormat - SfPdfViewer/Customize DateTimeFormat/Customize_DateTimeFormat/Customize_DateTimeFormat.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="25.2.6" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="25.2.6" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
