--- a/Annotations/Comment Panel/Retrieve the comment status - SfPdfViewer/Retrieve the comment status/Retrievethecommentstatus.csproj
+++ b/Annotations/Comment Panel/Retrieve the comment status - SfPdfViewer/Retrieve the comment status/Retrievethecommentstatus.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
