--- a/Annotations/Comment Panel/Retrieve the comment status/Retrieve the comment status/Retrievethecommentstatus.csproj
+++ b/Annotations/Comment Panel/Retrieve the comment status/Retrieve the comment status/Retrievethecommentstatus.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.50" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
