--- a/Annotations/Import-Export/Annotations as JSON stream and file/Annotations as JSON stream and file/Annotations_as_JSON_stream.csproj
+++ b/Annotations/Import-Export/Annotations as JSON stream and file/Annotations as JSON stream and file/Annotations_as_JSON_stream.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.46" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.46" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
