--- a/Annotations/Shapes/Remove arrow annotation heads-SfPdfViewer/Remove arrow annotation heads/Remove_arrow_annotation_heads.csproj
+++ b/Annotations/Shapes/Remove arrow annotation heads-SfPdfViewer/Remove arrow annotation heads/Remove_arrow_annotation_heads.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
