--- a/Annotations/Text Markup/Customize highlight annotation-SfPdfViewer/Customize highlight annotation/Customize_highlight_annotation.csproj
+++ b/Annotations/Text Markup/Customize highlight annotation-SfPdfViewer/Customize highlight annotation/Customize_highlight_annotation.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
     <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="21.2.10" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
