--- a/Common/Hosted sample with Swagger configuration/Hosted sample with Swagger configuration/Client/Swagger_configuration.Client.csproj
+++ b/Common/Hosted sample with Swagger configuration/Hosted sample with Swagger configuration/Client/Swagger_configuration.Client.csproj
@@ -10,8 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.43" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
