--- a/Common/Identify the PdfViewer has Undo, Redo - SfPdfViewer/Indentify PdfViewer has Undo, Redo/Indentify_Undo_Redo.csproj
+++ b/Common/Identify the PdfViewer has Undo, Redo - SfPdfViewer/Indentify PdfViewer has Undo, Redo/Indentify_Undo_Redo.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
