--- a/Common/Load Desire PDF in Blazor - SfPdfViewer/BlazorApp/Client/Load_Desire_PDF.Client.csproj
+++ b/Common/Load Desire PDF in Blazor - SfPdfViewer/BlazorApp/Client/Load_Desire_PDF.Client.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.5" PrivateAssets="all" />
-	  <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
-	  <PackageReference Include="Syncfusion.Blazor.Themes" Version="100.1.1" />
+	  <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+	  <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 	<!--<PropertyGroup>
 		<WasmNativeStrip>true</WasmNativeStrip>
