--- a/Common/Load PDF file using embed tag/Load PDF file using embed tag/Load_PDF_using_embed_tag.csproj
+++ b/Common/Load PDF file using embed tag/Load PDF file using embed tag/Load_PDF_using_embed_tag.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.Popups" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.Popups" Version="*" />
   </ItemGroup>
 
 </Project>
