--- a/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/LoadOfficeProducts/LoadOfficeProducts.csproj
+++ b/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/LoadOfficeProducts/LoadOfficeProducts.csproj
@@ -11,17 +11,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
 
 	 
-	  <PackageReference Include="Syncfusion.Blazor" Version="20.4.0.43" />
+	  <PackageReference Include="Syncfusion.Blazor" Version="*" />
 
 	 
 	  <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.4.0.49" />
-	  <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.4.0.43" /> 
-	  <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.4.0.43" />
-	  <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.4.0.43" />
-	  <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="20.4.0.43" />
-	  <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="20.4.0.43" />
-	  <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="20.4.0.43" />
-	  <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="20.4.0.43" />
+	  <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="*" /> 
+	  <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="*" />
+	  <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="*" />
+	  <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="*" />
+	  <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="*" />
+	  <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="*" />
+	  <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="*" />
 	  
   </ItemGroup>
 
