--- a/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/WebService/WebService.csproj
+++ b/Common/Load PDF, Excel, PPT file types/WASM Side Sample/Load PDF, Excel, PPT file types/WebService/WebService.csproj
@@ -9,14 +9,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core.Windows" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="20.1.0.61" />
-    <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="20.1.0.61" />
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.PresentationRenderer.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="*" />
+    <PackageReference Include="Syncfusion.XlsIORenderer.Net.Core" Version="*" />
     <PackageReference Include="WebGrease" Version="1.6.0" />
   </ItemGroup>
 
