--- a/Common/PdfViewer in Popup window - SfPdfViewer/PdfViewer in Popup window/PdfViewer_in_Popup_window.csproj
+++ b/Common/PdfViewer in Popup window - SfPdfViewer/PdfViewer in Popup window/PdfViewer_in_Popup_window.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
