--- a/Common/Prevent the PDF from scrolling - SfPdfViewer/Prevent the PDF from scrolling/Prevent_PDF_from_scrolling.csproj
+++ b/Common/Prevent the PDF from scrolling - SfPdfViewer/Prevent the PDF from scrolling/Prevent_PDF_from_scrolling.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
