--- a/Common/Render JS PDF Viewer component in Blazor - SfPdfViewer/Render JS Viewer in Blazor/Render_JS_in_Blazor.csproj
+++ b/Common/Render JS PDF Viewer component in Blazor - SfPdfViewer/Render JS Viewer in Blazor/Render_JS_in_Blazor.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.10" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.3.0.61" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
