--- a/Common/Render the PDF Viewer on Splitter - SfPdfViewer/Render PdfViewer on Splitter/PdfViewer_On_Splitter.csproj
+++ b/Common/Render the PDF Viewer on Splitter - SfPdfViewer/Render PdfViewer on Splitter/PdfViewer_On_Splitter.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
-	<PackageReference Include="Syncfusion.Blazor.Layouts" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+	<PackageReference Include="Syncfusion.Blazor.Layouts" Version="*" />
   </ItemGroup>
 
 </Project>
