--- a/Common/Render the PDF Viewer on Tab/Render the PDF Viewer on Tab/Render_PDF_Viewer_on_Tab.csproj
+++ b/Common/Render the PDF Viewer on Tab/Render the PDF Viewer on Tab/Render_PDF_Viewer_on_Tab.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.Layouts" Version="20.2.0.46" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.46" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.46" />
+    <PackageReference Include="Syncfusion.Blazor.Layouts" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
