--- a/Common/Resize the PDF Viewer to its parent element - SfPdfViewer/Render PdfViewer on Splitter/Resize_Viewer.csproj
+++ b/Common/Resize the PDF Viewer to its parent element - SfPdfViewer/Render PdfViewer on Splitter/Resize_Viewer.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
-	<PackageReference Include="Syncfusion.Blazor.Layouts" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+	<PackageReference Include="Syncfusion.Blazor.Layouts" Version="*" />
   </ItemGroup>
 
 </Project>
