--- a/Common/Supress the Error Dialog-SfPdfViewer/Supress the Error Dialog/Supress the Error Dialog.csproj
+++ b/Common/Supress the Error Dialog-SfPdfViewer/Supress the Error Dialog/Supress the Error Dialog.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.18" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
