--- a/Common/Unload Pdf document from Viewer - SfPdfViewer/Unload Pdf from Viewer/Unload_Pdf_from_Viewer.csproj
+++ b/Common/Unload Pdf document from Viewer - SfPdfViewer/Unload Pdf from Viewer/Unload_Pdf_from_Viewer.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
