--- a/Common/Update form fileds using Context Menu - SfPdfViewer/Form_using_Contextmenu/Form_using_Contextmenu.csproj
+++ b/Common/Update form fileds using Context Menu - SfPdfViewer/Form_using_Contextmenu/Form_using_Contextmenu.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
