--- a/Getting Started/Hosted application/Hosted application/Server/Hosted_application.Server.csproj
+++ b/Getting Started/Hosted application/Hosted application/Server/Hosted_application.Server.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.0" />
-	    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.46" />
+	    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.46" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
