--- a/Load and Save/Load a PDF file from base 64 string/Load a PDF file from base 64 string/Load_a_PDF_file_from_base64.csproj
+++ b/Load and Save/Load a PDF file from base 64 string/Load a PDF file from base 64 string/Load_a_PDF_file_from_base64.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
