--- a/Load and Save/Load a PDF file from memory stream/Load a PDF file from memory stream/Load_a_PDF_from_memory_stream.csproj
+++ b/Load and Save/Load a PDF file from memory stream/Load a PDF file from memory stream/Load_a_PDF_from_memory_stream.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,7 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewer" Version="20.2.0.45" />    
+    <PackageReference Include="Syncfusion.Blazor.PdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />    
   </ItemGroup>
 
 </Project>
