--- a/Load and Save/Load PDF file from URL/Load PDF file from URL/Load_PDF_file_from_URL.csproj
+++ b/Load and Save/Load PDF file from URL/Load PDF file from URL/Load_PDF_file_from_URL.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.Grid" Version="20.2.0.45" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
