--- a/Load and Save/Load a PDF file using local service/Load a PDF file using local service/Load_a_PDF_file_using_local_service.csproj
+++ b/Load and Save/Load a PDF file using local service/Load a PDF file using local service/Load_a_PDF_file_using_local_service.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewer" Version="20.2.0.36" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.36" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
