--- a/Load and Save/LoadAsync/LoadAsync/LoadAsync.csproj
+++ b/Load and Save/LoadAsync/LoadAsync/LoadAsync.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
