--- a/Load and Save/Modify the file name-SfPdfViewer/Modify the file name/Modify_the_file_name.csproj
+++ b/Load and Save/Modify the file name-SfPdfViewer/Modify the file name/Modify_the_file_name.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="100.1.1" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
   </ItemGroup>
 
 </Project>
