--- a/Load and Save/Modify the file name/Modify the file name/Modify_the_file_name.csproj
+++ b/Load and Save/Modify the file name/Modify the file name/Modify_the_file_name.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
