--- a/Load and Save/Open and Save from AWS S3/PDFViewerSample/PDFViewerSample.csproj
+++ b/Load and Save/Open and Save from AWS S3/PDFViewerSample/PDFViewerSample.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.305.7" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="24.1.44" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
