--- a/Load and Save/Open and Save from Azure blob storage-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
+++ b/Load and Save/Open and Save from Azure blob storage-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="24.1.44" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
