--- a/Load and Save/Open and Save from GCS-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
+++ b/Load and Save/Open and Save from GCS-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="24.1.44" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
