--- a/Load and Save/Open and Save from Google Drive-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
+++ b/Load and Save/Open and Save from Google Drive-SfPdfViewer/PDFViewerSample/PDFViewerSample.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.64.0.3256" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="24.1.44" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
