--- a/Load and Save/Open and Save from box cloud storage/PDFViewerSample/PDFViewerSample.csproj
+++ b/Load and Save/Open and Save from box cloud storage/PDFViewerSample/PDFViewerSample.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Box.V2.Core" Version="5.6.1" />
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="24.1.44" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="24.1.44" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
