--- a/Print/PDF Viewer in a Dialog-SfPdfViewer/PDF Viewer in a Dialog/PDF_Viewer_in_a_Dialog.csproj
+++ b/Print/PDF Viewer in a Dialog-SfPdfViewer/PDF Viewer in a Dialog/PDF_Viewer_in_a_Dialog.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="21.2.10" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
