--- a/Print/PDF Viewer in a Dialog/PDF Viewer in a Dialog/PDF_Viewer_in_a_Dialog.csproj
+++ b/Print/PDF Viewer in a Dialog/PDF Viewer in a Dialog/PDF_Viewer_in_a_Dialog.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.46" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.46" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
