--- a/Print/Print PDF document in .Net 5/Print PDF document in .Net 5/Print_PDF_document_in_Net5.csproj
+++ b/Print/Print PDF document in .Net 5/Print PDF document in .Net 5/Print_PDF_document_in_Net5.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.48" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.48" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
