--- a/RTL/RTL Sample/RTL_Sample.csproj
+++ b/RTL/RTL Sample/RTL_Sample.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.4.0.53" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.4.0.53" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
