--- a/Toolbar/Annotation Toolbar/Show or hide on loading/Show or hide on loading/Show_or_hide_on_loading.csproj
+++ b/Toolbar/Annotation Toolbar/Show or hide on loading/Show or hide on loading/Show_or_hide_on_loading.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.45" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
   </ItemGroup>
 
 </Project>
