--- a/Toolbar/Custom Toolbar/Custom toolbar with save option/Custom toolbar with save option/Custom_toolbar_with_save_option.csproj
+++ b/Toolbar/Custom Toolbar/Custom toolbar with save option/Custom toolbar with save option/Custom_toolbar_with_save_option.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.2.0.46" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.2.0.46" />
+    <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
