--- a/Toolbar/Custom Toolbar/EBook Reader/CustomToolbar/CustomToolbar.csproj
+++ b/Toolbar/Custom Toolbar/EBook Reader/CustomToolbar/CustomToolbar.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="25.1.35" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.35" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
