984779: Update the sample file

--- a/Server Deployment/WinForms/WinFormsBlazorHybridApp/WinFormsBlazorHybridApp.csproj
+++ b/Server Deployment/WinForms/WinFormsBlazorHybridApp/WinFormsBlazorHybridApp.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="31.1.17" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="31.1.17" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="9.0.110" />
   </ItemGroup>
 
