--- a/Server Deployment/DeployWPF/WPFBlazorHybridApp/WPFBlazorHybridApp.csproj
+++ b/Server Deployment/DeployWPF/WPFBlazorHybridApp/WPFBlazorHybridApp.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="9.0.110" />
-    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="31.1.17" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="31.1.17" />
+    <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
   </ItemGroup>
 
 </Project>
