983750: Updated BlazorWebApp.csproj

--- a/Toolbar/Mobile Toolbar/Enable Desktop Mode/BlazorWebApp/BlazorWebApp.csproj
+++ b/Toolbar/Mobile Toolbar/Enable Desktop Mode/BlazorWebApp/BlazorWebApp.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="31.1.20" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="31.1.20" />
+      <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="*" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="*" />
     </ItemGroup>
 </Project>
